--- a/data/blog/zh/test.mdx
+++ b/data/blog/zh/test.mdx
@@ -12,7 +12,9 @@ summary: clark测试博客
 
 fn main () -> () {
     println!("test");
-
 }
+
+## 测试照片
+<Image src="/static/test1.jpg" alt="测试的栗丸照片" width={800} height={450} />
 
 ```
