--- a/data/blog/zh/test.mdx
+++ b/data/blog/zh/test.mdx
@@ -19,4 +19,4 @@ fn main () -> () {
 ## 测试照片
 
 
-<Image src="/static/test1.jpg" alt="测试的栗丸照片" width={800} height={450} />
+<Image src="/blog/test1.jpg" alt="测试的照片" width={800} height={450} />
