--- a/data/blog/zh/test.mdx
+++ b/data/blog/zh/test.mdx
@@ -8,7 +8,7 @@ summary: clark测试博客
 
 ## 这是一个测试的博客
 
-``` rust
+```rust
 
 fn main () -> () {
     println!("test");
@@ -18,5 +18,4 @@ fn main () -> () {
 
 ## 测试照片
 
-
-<Image src="/blog/test1.jpg" alt="测试的照片" width={800} height={450} />
+<Image src="https://logjs.site/blog/test1.jpg" alt="测试的照片" width={800} height={450} />
