--- a/data/blog/zh/test.mdx
+++ b/data/blog/zh/test.mdx
@@ -19,3 +19,11 @@ fn main () -> () {
 ## 测试照片
 
 <Image src="https://logjs.site/blog/test1.jpg" alt="测试的照片" width={800} height={450} />
+
+## 实时图片测试
+
+<LivePhoto videoSrc="https://logjs.site/blog/IMG_4533.MOV" />
+
+## 视频测试
+
+<VideoPlayer src="https://logjs.site/blog/IMG_4486.mp4" />
