--- a/data/blog/zh/test.mdx
+++ b/data/blog/zh/test.mdx
@@ -22,8 +22,14 @@ fn main () -> () {
 
 ## 实时图片测试
 
-<LivePhoto videoSrc="https://logjs.site/blog/IMG_4533.MOV" />
+<LivePhoto
+  videoSrc="https://logjs.site/blog/IMG_4533.MOV"
+  photoSrc={'https://logjs.site/blog/test1.jpg'}
+/>
 
 ## 视频测试
 
-<VideoPlayer src="https://logjs.site/blog/IMG_4486.mp4" />
+<VideoPlayer
+  src="https://logjs.site/blog/IMG_4486.mp4"
+  poster={'https://logjs.site/blog/test1.jpg'}
+/>
