--- a/data/blog/zh/test.mdx
+++ b/data/blog/zh/test.mdx
@@ -20,6 +20,8 @@ fn main () -> () {
 
 <Image src="https://logjs.site/blog/test1.jpg" alt="测试的照片" width={800} height={450} />
 
+<DividerSmall />
+
 ## 实时图片测试
 
 <LivePhoto
@@ -27,9 +29,11 @@ fn main () -> () {
   photoSrc={'https://logjs.site/blog/test1.jpg'}
 />
 
+<DividerSmall />
+
 ## 视频测试
 
 <VideoPlayer
-  src="https://logjs.site/blog/IMG_4486.mp4"
+  src="https://logjs.site/blog/IMG_4486.MP4"
   poster={'https://logjs.site/blog/test1.jpg'}
 />
