--- a/data/blog/zh/test.mdx
+++ b/data/blog/zh/test.mdx
@@ -33,7 +33,4 @@ fn main () -> () {
 
 ## 视频测试
 
-<VideoPlayer
-  src="https://logjs.site/blog/IMG_4486.MP4"
-  poster={'https://logjs.site/blog/test1.jpg'}
-/>
+<VideoPlayer src="https://logjs.site/blog/IMG_4486.MP4" />
