--- a/data/blog/zh/test.mdx
+++ b/data/blog/zh/test.mdx
@@ -2,7 +2,7 @@
 title: Hello world
 date: '2025-08-07'
 tags: ['测试']
-draft: false
+draft: true
 summary: clark测试博客
 ---
 
@@ -18,7 +18,7 @@ fn main () -> () {
 
 ## 测试照片
 
-<Image src="https://logjs.site/blog/test1.jpg" alt="测试的照片" width={800} height={450} />
+<Image src="https://logjs.site/blog/test1.jpg" alt="测试的照片" />
 
 <DividerSmall />
 
