--- a/data/blog/zh/style-test.mdx
+++ b/data/blog/zh/style-test.mdx
@@ -2,7 +2,7 @@
 title: 'MDX 样式测试页面'
 date: '2025-07-15'
 tags: ['测试']
-draft: false
+draft: true
 summary: '这是一个用于全面测试网站所有 Markdown 和组件样式的页面。它包括标题、列表、代码块、图片、视频、引用、表格等所有常见元素。'
 ---
 
