--- a/data/blog/zh/book_1.mdx
+++ b/data/blog/zh/book_1.mdx
@@ -9,3 +9,9 @@ summary: 韩国通过朴卡卡领导的"汉江奇迹"一跃成为发达国家，
 <Image src="https://logjs.site/blog/book_1/cover.jpg" alt="压缩现代性下的韩国-封面" />
 
 <Resource src="https://logjs.site/blog/book_1/recource.epub" name="压缩现代性下的韩国" />
+
+#### 引子
+
+> 弗朗西斯·斯科特·基·菲茨杰拉德 在1921年创作的小说《本杰明·巴顿奇事》中，
+> 一个出生就已经年老体衰的婴儿受到了双重诅咒。他有着一副婴儿的躯体，但是身体机能已经衰老，这让他和他周围的人痛苦不堪。在以年龄/世代划分的等级社会结构下，
+> 他老年人般的思维方式让他意外地遭到抛弃。本杰明·巴顿在他的一生中，一直与他周围世界保持一种非常荒谬可笑的关系，韩国与周围世界的关系亦是如此。
