--- a/data/blog/zh/book_1.mdx
+++ b/data/blog/zh/book_1.mdx
@@ -3,7 +3,7 @@ title: 《压缩现代性下的韩国》
 date: '2025-08-11'
 tags: ['书籍']
 draft: false
-summary: 韩国通过朴卡卡领导的"汉江奇迹"一跃成为发达国家，在收获了极大的经济繁荣之下，"狗蛋，代价，是什么呢?"
+summary: 韩国通过朴卡卡领导的"汉江奇迹"一跃成为发达国家，在收获了极大的经济繁荣之下，但是 "狗蛋，代价，是什么呢?"
 ---
 
 <Image src="https://logjs.site/blog/book_1/cover.jpg" alt="压缩现代性下的韩国-封面" />
@@ -18,7 +18,16 @@ summary: 韩国通过朴卡卡领导的"汉江奇迹"一跃成为发达国家，
 
 ## 压缩现代性及其家庭基础
 
+- 韩国施行 `先增长，后分配` 发展战略.
+  - 最大限度地缩减社会福利和公共支出，将社会福利的政治责任转移给家庭，通过集中力量投入生产，加速从农业国向工业国的发展过程.
+
+- 快速的社会转型，剧烈的产业结构调整，让终身就业变为了一种特权.
+  - 大多数韩国人，无论男女，都未能在长期集中经济活动的基础上得到社会阶层认同.
+
 ## 偶然多元性
+
+- 在韩国，有四种主要的家庭意识形态——`儒家家庭主义`、`工具家庭主义`、`情感家庭主义`和`个人主义家庭主义`
+  - 现在韩国所面临的困境是，在突如其来的社会变化中，这些不同的家庭意识形态只是在偶然间实现了共存，所以，这并不一定就代表韩国具有民主多元的家庭文化
 
 ## 社会投资家庭与教育政策
 
