--- a/data/blog/zh/about_learn.mdx
+++ b/data/blog/zh/about_learn.mdx
@@ -25,7 +25,7 @@ summary: 重新开始写博客，"费曼学习法"的实践
   name="《费曼物理学讲义》"
 />
 
-想着将博客重新捡起来，以 "Teach" 的方式在博客分享出来，既提升了自己的理解能力，也方便了他人，与他人交流的过程也可以修正我的错误，一举多得，遂决定继续重新更新博客.
+想着将博客重新捡起来，将学到的知识以 "Teach" 的方式在博客分享出来，既提升了自己的理解能力，也方便了他人，与他人交流的过程也可以修正我的错误，一举多得，遂决定继续重新更新博客.
 
 完.
 
