--- a/data/blog/zh/book_1.mdx
+++ b/data/blog/zh/book_1.mdx
@@ -3,7 +3,7 @@ title: 《压缩现代性下的韩国》
 date: '2025-08-11'
 tags: ['书籍']
 draft: false
-summary: 韩国通过朴卡卡领导的"汉江奇迹"一跃成为发达国家，在收获了极大的经济繁荣之下，但是 "狗蛋，代价，是什么呢?"
+summary: 韩国通过朴卡卡领导的"汉江奇迹"一跃成为发达国家，收获了极大的经济繁荣，但是 "狗蛋，代价，是什么呢?"
 ---
 
 <Image src="https://logjs.site/blog/book_1/cover.jpg" alt="压缩现代性下的韩国-封面" />
